fix bnjy mode; tweak to tile spacing

--- a/liwords-ui/src/App.scss
+++ b/liwords-ui/src/App.scss
@@ -139,9 +139,7 @@ a.plain,
 
 .bnjyMode {
     /* XXX: fix this . it is now data-letter*/
-  .tile[data-rune='I'],
-  .tile[data-rune='O'],
-  .tile[data-rune='X'] {
+  .tile[data-bnjy='1'] {
     transform: rotate(180deg);
 
     /* this mirrors gameroom/scss/gameroom.scss */
