--- a/liwords-ui/src/gameroom/scss/gameroom.scss
+++ b/liwords-ui/src/gameroom/scss/gameroom.scss
@@ -1009,10 +1009,11 @@ p.streak-loss {
       display: inline-block;
     }
     &[data-length="2"] p.rune > span {
-      transform: translateX(-0.1em) scaleX(calc(1 / 2));
+      transform: scaleX(calc(1 / 1.5));
     }
     &[data-length="3"] p.rune > span {
-      transform: translateX(-0.2em) scaleX(calc(1 / 3));
+      transform:  scaleX(calc(1 / 1.8));
+      letter-spacing: -1em;
     }
 }
 
